<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="label_dado_cliente">Dados do cliente</string>
    <string name="edit_nome_cliente">Nome do cliente</string>
    <string name="label_pizzas">Escolha a(s) pizza(s)</string>
    <string name="label_atum">Atum</string>
    <string name="label_bacon">Bacon</string>
    <string name="label_calabresa">Calabresa</string>
    <string name="label_mussarela">Mussarela</string>
    <string name="label_tamanho_pizza">Tamanho da pizza</string>
    <string name="label_tamanho_pequena">Pequena</string>
    <string name="label_tamanho_media">Média</string>
    <string name="label_tamanho_grande">Grande</string>
    <string name="label_forma_pgto">Forma de Pagamento</string>
    <string name="credito">Cartão de Crédito</string>
    <string name="debito">Cartão de Débito</string>
    <string name="vr">Vale refeição</string>
    <string name="cupom">Cupom</string>
    <string name="fiado">Fiado</string>
    <string name="botao_calcular">Calcular</string>

    <string name="saudacao">Olá %1$s. Vamos ligar para o número %2$s</string>

</resources>
