<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <!--android:padding="16dp"-->

        <TextView
            style="@style/label_titulo_padding"
            android:text="@string/label_dado_cliente" />

        <EditText
            style="@style/label_titulo"
            android:hint="@string/edit_nome_cliente" />

        <TextView
            style="@style/label_titulo_padding"
            android:text="@string/label_pizzas" />

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_atum" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_bacon" />

        </LinearLayout>

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_calabresa" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_mussarela" />

        </LinearLayout>

        <TextView
            style="@style/label_titulo_padding"
            android:text="@string/label_tamanho_pizza" />

        <RadioGroup style="@style/label_titulo">

            <RadioButton
                style="@style/label_titulo"
                android:text="@string/label_tamanho_pequena" />

            <RadioButton
                style="@style/label_titulo"
                android:text="@string/label_tamanho_media" />

            <RadioButton
                style="@style/label_titulo"
                android:text="@string/label_tamanho_grande" />

        </RadioGroup>

        <TextView
            style="@style/label_titulo_padding"
            android:text="@string/label_forma_pgto" />

        <Spinner
            style="@style/label_titulo"
            android:entries="@array/formas_pagamento" />

        <Button
            style="@style/label_titulo"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botao_personalizado"
            android:text="@string/botao_calcular"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>